<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BT SmartMirror</string>
    <string name="UUID" tools:keep="@string/UUID" tools:ignore="TypographyDashes">94f39d29-7d6d-437d-973b-fba39e49d4ee</string>
    <string name="confText">Configure</string>
    <string name="main_menu">Main Menu</string>
    <string name="edit_layout">Edit Layout</string>
    <string name="smart_mirror_disconnected">Smart Mirror: Disconnected</string>
    <string name="back">Back</string>
    <string name="onoff">On/Off</string>
    <string name="settingText">Configure Modules</string>
    <string name="modChoose">Choose A Module</string>
    <string name="retry">Retry</string>
    <string name="choose">Choose a Module</string>
    <string name="deviceList">Devices seen</string>
    <string name="devlisterror">No Bluetooth devices paired\nGo to device settings to find your mirror</string>
    <string name="currentConfig">Current Config:\n</string>
    <string name="cancel">Cancel</string>
    <string name="time24hrOption">24-Hour Format</string>
    <string name="secondsOption">Show Seconds</string>
    <string name="useC">Use Celsius</string>
    <string name="zip">Zipcode - Currently:</string>
    <string name="noChangesText">has no options</string>
    <string name="enterZip">Enter a new 5-Digit Zipcode:</string>
    <string name="noBT">Not Connected, Saved Locally</string>
    <string name="yesBT">Applied</string>
    <string name="connectingText">Connecting...</string>
    <string name="connSucceeded">Success!</string>
    <string name="connFailed">Failed!</string>
    <string name="defLayout">{\n
                                \"layout\":\n
                                    \"l1\": \"greeting\",\n
                                    \"l2\": \"time\",\n
                                    \"l3\": \"none",\n
                                    \"r1\": \"weather\",\n
                                    \"r2\": \"none\",\n
                                    \"r3\": \"none\"\n
                            },</string>
    <string name="defSettings">\n\"weather\":\n
                                    {\n
                                    \"useC\": false,\n
                                    \"zipcode\": "56001"\n
                                    },\n
                                \"general\":\n
                                    {\n
                                    \"military\": false,\n
                                    \"showSec\": false,\n
                                    \"color\": \"white\",\n
                                    \"size\": 500\n
                                    }\n
                                }
    </string>
    <string-array name="spotNames">
        <item>Left Top:</item>
        <item>Right Tip:</item>
        <item>Left Middle:</item>
        <item>Right Middle:</item>
        <item>Left Bottom:</item>
        <item>Right Bottom:</item>
    </string-array>
    <string-array name="ConStatText">
        <item>Connection Status: </item>
        <item>Attempting To Connect</item>
        <item>Success</item>
        <item>Not Paired</item>
        <item>\nMac Address: </item>
        <item>Paired, Listening</item>
    </string-array>
    <string-array name="modules">
        <item>None</item>
        <item>Greeting</item>
        <item>Weather</item>
        <item>Time</item>
        <item>News</item>
        <item>Email</item>
    </string-array>
</resources>
