<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sendesign.btmirror.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/halfwidth"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/SettingsBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/halfwidth"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/settingsConf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingText"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/greetingSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/greeting"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/greetCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/onoff" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
